fix input group alignment

--- a/content/scss/_c-input.scss
+++ b/content/scss/_c-input.scss
@@ -94,11 +94,12 @@ textarea.c-input--h-large { height: 20rem; }
 
 .c-input-group {
   display: flex;
-  align-items: flex-start;
+  position: relative;
+
 }
 
-.c-input-group__item {
-  flex: 1;
+.c-input-group__input {
+  width: calc(100% - 3.6rem);
 }
 
 .c-input-group__append,
@@ -113,24 +114,28 @@ textarea.c-input--h-large { height: 20rem; }
   align-items: center;
   padding: 0 0.8rem;
   border: 1px solid $color-gray-200;
+  position: absolute;
 }
 
 .c-input-group__prepend {
-  margin-right: -0.1rem;
   border-radius: 0.4rem 0 0 0.4rem;
+  border-right: none;
+
+  ~.c-input-group__input {
+    margin-left: 36px;
+  }
 }
 
 .c-input-group__append {
   border-radius: 0 0.4rem 0.4rem 0;
-  margin-left: -0.1rem;
+  border-left: none;
+  right: 0;
 }
 
-.c-input-group > .c-input:not(:last-child) {
+.c-input-group>.c-input-group__input:not(:last-child) .c-input {
   border-radius: 0.4rem 0 0 0.4rem;
 }
 
-.c-input-group > .c-input:not(:first-child) {
+.c-input-group>.c-input-group__input:not(:first-child) .c-input {
   border-radius: 0 0.4rem 0.4rem 0;
 }
-
-
